# HW-sql-5-PostgreSQL-C-

./: readme.md
cpp/: CMakeLists.txt  main.cpp
